--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
 
     --popover-foreground: 240, 10%, 4%;
 
-    --primary: 220.9 39.3% 11%;
+    --primary: 0 0% 4%; /* #0a0a0a in HSL */
 
     --primary-foreground: 210 20% 98%;
 
@@ -83,7 +83,7 @@
 
     --popover-foreground: 210 20% 98%;
 
-    --primary: 210 20% 98%;
+    --primary: 0 0% 100%;
 
     --primary-foreground: 220.9 39.3% 11%;
 
